# sqlite-browser

./: Cargo.toml  LICENSE  README.md  SCROLLING_IMPROVEMENTS.md  test.db
.kiro/specs/ui-interaction-fixes/: design.md  requirements.md  tasks.md
src/: file_manager.rs  main.rs  models.rs  ui.rs
src/parser/: mod.rs  sqlite_parser.rs
src/ui/: browser.rs  components.rs  mod.rs  status_manager.rs
src/ui/entities/: file_dialog.rs  mod.rs  page_grid.rs  page_sidebar.rs
