[package]
name = "sqlite-browser"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
anyhow = "1.0"
thiserror = "1.0"
byteorder = "1.5"
notify = "6.0"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
tokio = { version = "1.45.1", features = ["full"] }
rfd = "0.14"
